Scrollbar color fix

--- a/src/gstart.css
+++ b/src/gstart.css
@@ -403,6 +403,7 @@ body {
 input,
 select {
 	padding: 0.1em 0.3em;
+	scrollbar-color: initial;
 }
 
 .ibutton {
